5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1637_2445.log
== TEST (2019-04-09 11:35:50) 
-- CODE:
grandeza=input().upper()

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:47) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=9*valor+160;
	print(F)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(C)

-- OUTPUT:
3040.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:41:51) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=9*valor+160;
	print(F)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(C)

-- OUTPUT:
3040.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:42:43) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	C=(5*valor-160)/9
	print(C)
if(grandeza=="F"):
	F=9*valor+160;
	print(F)
	
	C=(5*valor-160)/9
	print(C)
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:43:04) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	C=(5*valor-160)/9
	print(C)
if(grandeza=="F"):
	F=9*valor+160;
	print(F)
	
	C=(5*valor-160)/9
	print(C)
-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:05) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
		F=(9*valor+160)5;
	print(F)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(C)
-- ERROR:
File "XXXX", line 5
    F=(9*valor+160)5;
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:13) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
		F=(9*valor+160)/5;
	print(F)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(C)
-- ERROR:
File "XXXX", line 6
    print(F)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:46:21) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=(9*valor+160)/5;
	print(F)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(C)
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:08) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=(9*valor+160)/5;
	print(round(F,2)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(round(C,2)
-- ERROR:
File "XXXX", line 7
    if(grandeza=="F"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:21) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=(9*valor+160)/5;
	print(round(F,2)
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(round(C,2))
-- ERROR:
File "XXXX", line 7
    if(grandeza=="F"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:47:59) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=(9*valor+160)/5;
	print(round(F,2))
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(round(C,2))
-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:48:04) 
-- CODE:
grandeza=input().upper()
valor=float(input())

if(grandeza=="C"):
	F=(9*valor+160)/5;
	print(round(F,2))
if(grandeza=="F"):
	C=(5*valor-160)/9
	print(round(C,2))
-- EXECUTION TIME:
0.226032
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
